@@ -1,5 +1,5 @@
-require("__rubia__.script.crapapult-recipes")
-require("__rubia__.script.rubia-surface-blacklist")
+require("__rubia__.prototypes.data-script.crapapult-recipes")
+require("__rubia__.prototypes.data-script.rubia-surface-blacklist")
 require("__rubia__.prototypes.technology-final-fixes")
 
 --log(serpent.block(data.raw.planet.nauvis.map_gen_settings.autoplace_settings.entity.settings))
